[package]
name = "derive-weak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "visit-mut", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
async_object = { path = "../async_object" }

[lib]
proc-macro = true
